--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "devDependencies": {
-    "eslint": "^9.34.0",
-    "eslint-config-prettier": "^10.1.8",
-    "prettier": "^3.6.2"
+  "name": "my-ts-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "dependencies": {
-    "axios": "^1.11.0"
+  "devDependencies": {
+    "typescript": "~5.8.3",
+    "vite": "^7.1.2"
   }
+  
 }
